# minicrypt

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  minicrypt.pc.in
cmake/: clint.cmake  coverage.cmake  cppcheck.arg  features.cmake  project.cmake  tidy.arg
src/: aes.c  aes.h  crc.c  crc.h  helper.c  helper.h  hmac.c  hmac.h  md5.c  md5.h  minicrypt.c  minicrypt.h  random.c  random.h  ring256.c  ring256.h  sha1.c  sha1.h  sha256.c  sha256.h
test/: aes.c  crc.c  hmac.c  md5.c  random.c  ring256.c  sha1.c  sha256.c
